fix mytube play button alignment

--- a/docs/sites/all/themes/ssd/sass/style.scss
+++ b/docs/sites/all/themes/ssd/sass/style.scss
@@ -417,6 +417,10 @@ body.i18n-vi .slogan, body.i18n-ru .slogan, body.i18n-tr .slogan {
   margin: 20px auto;
   display: block;
 }
+.field-name-body img.mytubeplay,
+.field-name-body p img.mytubeplay {
+  margin: 0 auto;
+}
 .field-name-body .glossify-link img,
 .field-name-body p .glossify-link img {
   margin: 0;
